Changelog for JErgometer
""""""""""""""""""""""""

== coming 0.7.12 ==
* [stefan]  * fixed bug #182: JErgometer wants to update even if it's a bleeding edge version

== 0.7.11 ==

2011-04-07
* [stefan]  * fixed bug #249: incorrect distance and speed displayed (has to be devided by 10)
            * implemented issue #167: mark real pulse red when pulse information is missing
            * implemented issue #250: display units for distance, speed, power, ...
            * implemented issue #251: select last training program after start

2010-09-05
* [stefan]  * fixed bug #198: "Waiting auf Reset-Ende" needs to be translated completely

2010-04-06
* [stefan]  * applied patch from Benedikt Heinen to fix 32 bit issue on MacOS X

== 0.7.10 ==

* skipped :)

== 0.7.9 ==

2010-02-28
* [stefan]  * towards feature #168: pulse after session can be recorded

2010-02-23
* [stefan]  * implemented feature #177: extend timeline automatically when reaching end of traning program
            * implemented issue #176: add a menu for managing programs

2010-02-20
* [stefan]  * implemented issue #178: save and restore last window position and size
            * fixed issue #155: test connection sometime successful when using wrong COM port
            * fixed problem that a new session cannot be deleted right after recording

== 0.7.8 ==

2010-01-23
* [stefan]  * fixed some I18N issues
            * solved issue #161: design an icon for JErgometer
            * implemented feature #154: add legend to the diagram
            * solved issue #173: bugs cannot be added by anonymous users

2010-01-22
* [stefan]  * several style changes (diagram, buttons)

== 0.7.7 ==

2010-01-19
* [stefan]  * simplified example programs (use relative values instead of absolute ones)
            * minor fixes
            * implemented issue #172: ensure that a user is selected

== 0.7.6 ==

2010-01-16
* [stefan]  * fixed problem that linux source package is still missing

== 0.7.5 ==

2010-01-16