@@ -14,6 +14,8 @@ import java.util.ResourceBundle;
  * Settings window.
  */
 public class SettingsWindow extends JDialog {
+
+
 	{
 // GUI initializer generated by IntelliJ IDEA GUI Designer
 // >>> IMPORTANT!! <<<
@@ -257,7 +259,6 @@ public class SettingsWindow extends JDialog {
 		return mainPanel;
 	}
 
-
 	public enum ReturnCode {
 		abort, save
 	}
@@ -379,14 +380,26 @@ public class SettingsWindow extends JDialog {
 
 		DefaultComboBoxModel comboBoxModel = new DefaultComboBoxModel();
 		int i = 0;
-		for (String s : BikeConnectorSerial.getPortNames()) {
-			comboBoxModel.addElement(s);
-			// check if this comport this the current comport
-			if (comPort != null && s.equals(comPort)) {
-				comPortIndex = i;
+
+		try {
+			// detect available serial ports
+			for (String s : BikeConnectorSerial.getPortNames()) {
+				comboBoxModel.addElement(s);
+				// check if this comport this the current comport
+				if (comPort != null && s.equals(comPort)) {
+					comPortIndex = i;
+				}
+				i++;
 			}
-			i++;
+		} catch (NoClassDefFoundError ignored) {
+		} catch (UnsatisfiedLinkError e) {
+			e.printStackTrace();
+			JOptionPane.showMessageDialog(this, I18n.getString("msg.unsatisfied_link_error"), I18n.getString("error_dialog.title"), JOptionPane.ERROR_MESSAGE);
+		} catch (Exception e) {
+			e.printStackTrace();
+			JOptionPane.showMessageDialog(this, I18n.getString("msg.connection_failed"), I18n.getString("error_dialog.title"), JOptionPane.ERROR_MESSAGE);
 		}
+
 		// if comport is not in the list -> add it
 		if (comPort != null && comPortIndex == -1) {
 			comboBoxModel.addElement(comPort);
