@@ -95,7 +95,7 @@ connection_tester.send_reset=Sending reset command
 connection_tester.wait_for_reset_finished=Waiting for reset finished
 connection_tester.retrieving_ergometer_id=Retrieving ergometer id
 msg.com_port_used_by_the_following_application=COM port is currently owned by application "%s"!
-msg.unsatisfied_link_error=JErgometer could not load the correct COM port library for your operating system.\nPlease file a bug report on jergometer.org and include the console output and the major information about your OS. Thanks.
+msg.unsatisfied_link_error=JErgometer could not load the serial port library for your operating system.\nPlease file a bug report on jergometer.org and include the console output and the info which OS you are using. Thanks.
 error_dialog.title=Error!
 menu.programs.edit=Edit
 menu.programs.edit_mn=E
