@@ -116,7 +116,7 @@ connection_tester.send_reset=Sende Reset-Kommando
 connection_tester.wait_for_reset_finished=Warte auf Reset-Ende
 connection_tester.retrieving_ergometer_id=Hole Ergometer-ID
 msg.com_port_used_by_the_following_application=Der COM-Port wird derzeit von der Anwendung "%s" genutzt!
-msg.unsatisfied_link_error=JErgometer konnte leider nicht die richtige COM-Port-Bibliothek für Ihr Betriebssystem laden.\nBitte melden Sie das Problem dem Entwickler, indem Sie ihm eine Mail schreiben oder auf jergometer.org ein neues Ticket zu dem Problem anlegen.\nVergessen Sie dabei bitte nicht, Ihr Betriebsystem und die Fehlerausschriften im Konsolenfenster anzugeben. Danke.
+msg.unsatisfied_link_error=JErgometer konnte leider nicht die Serial-Port-Bibliothek für Ihr Betriebssystem laden.\nBitte melden Sie das Problem dem Entwickler, indem Sie ihm eine Mail schreiben oder auf jergometer.org ein einen Fehlerbericht (neues Ticket) verfassen.\nVergessen Sie dabei bitte nicht, Ihr Betriebsystem und die Fehlerausschriften im Konsolenfenster anzugeben. Danke.
 error_dialog.title=Fehler!
 menu.programs.edit=Editieren
 menu.programs.edit_mn=E
